[package]
name = "hyper-stuck"
version = "0.1.0"
authors = ["Sudeep Jathar <sudeep.jathar@druva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hyper = {version = "0.14.27", features=["full"]}
tokio = { version = "1.15", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
futures-util = "0.3"
rand = "0.8"
waitgroup = "0.1.2"
log = "0.4"
env_logger = "0.8"
tracing = "0.1"
# tracing-subscriber = "0.2"
hyper-rustls = {version="0.24", features=["http2"]}
rustls = {version="0.21.9", features=["dangerous_configuration"]}
rustls-pemfile = "1.0.4"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
tracing-appender = "0.2.2"
# console-subscriber = "0.1.10"
# async-backtrace = "0.2.6"