[package]
name = "hyper-stuck"
version = "0.1.0"
authors = ["Sudeep Jathar <sudeep.jathar@druva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hyper = {version = "1.0.1", features=["client", "http2"]}
hyper-util = {version="0.1", default-features = false, features = ["client-legacy","server-auto", "tokio"]}
tokio = { version = "1.15", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
futures-util = "0.3"
# rand = "0.8"
waitgroup = "0.1.2"
log = "0.4"
env_logger = "0.8"
tracing = "0.1"
# tracing-subscriber = "0.2"
hyper-rustls = {git="https://github.com/izderadicka/hyper-rustls.git", branch="hyper-v1", features=["http2"]}
rustls = {version="0.21.9", features=["dangerous_configuration"]}
rustls-pemfile = "1.0.4"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
tracing-appender = "0.2.2"
http-body-util = "0.1.0"
clap = { version = "4.4.8", features = ["derive"] }
# http = "1.0.0"
# console-subscriber = "0.1.10"
# async-backtrace = "0.2.6"